--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
          <div class="encriptador">
             <textarea name="texto" id="texto" 
             class="texto" placeholder="Ingrese el texto aquí"></textarea> 
+            <img src="img/logo.png">
                 <div class="condiciones">
+                    <img src="img/circulo.png">
                     <p>Solo letras minúsculas y sin acentos.</p></div>
                     <div class="botones">
                         <button class="boton-encriptar" type="button" 
