actuaaliacion del css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <div class="encriptador">
             <textarea name="texto" id="texto" 
             class="texto" placeholder="Ingrese el texto aquí"></textarea> 
-            <img src="img/logo.png">
+            <img src="img/logo.png" alt="logo-alura" class="logo">
                 <div class="condiciones">
                     <img src="img/circulo.png">
                     <p>Solo letras minúsculas y sin acentos.</p></div>
