actualiza el css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div class="encriptado">
                 <img src="" alt="" id="imagen">
                 <div class="mensaje-encriptado" id="mensaje-encriptado">
-                    <textarea name="mensaje" id="mensaje" class="mensaje"></textarea>
                     <h1 id="mensaje-titulo">Ningun mensaje fue encontrado</h1>
                     <p id="mensaje-nota">Ingresa el texto que desees encriptar o desencriptar</p>
+                    <textarea name="mensaje" id="mensaje" class="mensaje"></textarea>
+                    <button class="copiar" type="button" onclick="copiar()">Copiar</button>
                 </div>
             </div>
     </div> 
